FIX: menu items wrapping

--- a/src/components/Menus/menus-styles.css
+++ b/src/components/Menus/menus-styles.css
@@ -51,6 +51,7 @@
 
 .content-news {
     left: -2em;
+    white-space: nowrap;
 }
 
 .header-details>.content>ul {
